--- a/r5dev/vproj/netconsole.vcxproj.filters
+++ b/r5dev/vproj/netconsole.vcxproj.filters
@@ -28,57 +28,57 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="tier1\NetAdr2.cpp">
+    <ClCompile Include="..\tier1\NetAdr2.cpp">
       <Filter>sdk\tier1</Filter>
     </ClCompile>
-    <ClCompile Include="public\utility.cpp">
+    <ClCompile Include="..\public\utility.cpp">
       <Filter>sdk\public</Filter>
     </ClCompile>
-    <ClCompile Include="core\stdafx.cpp">
+    <ClCompile Include="..\core\stdafx.cpp">
       <Filter>core</Filter>
     </ClCompile>
-    <ClCompile Include="tier2\socketcreator.cpp">
+    <ClCompile Include="..\tier2\socketcreator.cpp">
       <Filter>sdk\tier2</Filter>
     </ClCompile>
-    <ClCompile Include="engine\net.cpp">
+    <ClCompile Include="..\engine\net.cpp">
       <Filter>sdk\engine</Filter>
     </ClCompile>
-    <ClCompile Include="netconsole\netconsole.cpp">
+    <ClCompile Include="..\netconsole\netconsole.cpp">
       <Filter>core</Filter>
     </ClCompile>
-    <ClCompile Include="core\termutil.cpp">
+    <ClCompile Include="..\core\termutil.cpp">
       <Filter>core</Filter>
     </ClCompile>
-    <ClCompile Include="protoc\sv_rcon.pb.cc">
+    <ClCompile Include="..\protoc\sv_rcon.pb.cc">
       <Filter>thirdparty\protobuf</Filter>
     </ClCompile>
-    <ClCompile Include="protoc\cl_rcon.pb.cc">
+    <ClCompile Include="..\protoc\cl_rcon.pb.cc">
       <Filter>thirdparty\protobuf</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="tier1\NetAdr2.h">
+    <ClInclude Include="..\tier1\NetAdr2.h">
       <Filter>sdk\tier1</Filter>
     </ClInclude>
-    <ClInclude Include="core\stdafx.h">
+    <ClInclude Include="..\core\stdafx.h">
       <Filter>core</Filter>
     </ClInclude>
-    <ClInclude Include="tier2\socketcreator.h">
+    <ClInclude Include="..\tier2\socketcreator.h">
       <Filter>sdk\tier2</Filter>
     </ClInclude>
-    <ClInclude Include="engine\net.h">
+    <ClInclude Include="..\engine\net.h">
       <Filter>sdk\engine</Filter>
     </ClInclude>
-    <ClInclude Include="netconsole\netconsole.h">
+    <ClInclude Include="..\netconsole\netconsole.h">
       <Filter>core</Filter>
     </ClInclude>
-    <ClInclude Include="core\termutil.h">
+    <ClInclude Include="..\core\termutil.h">
       <Filter>core</Filter>
     </ClInclude>
-    <ClInclude Include="protoc\sv_rcon.pb.h">
+    <ClInclude Include="..\protoc\sv_rcon.pb.h">
       <Filter>thirdparty\protobuf</Filter>
     </ClInclude>
-    <ClInclude Include="protoc\cl_rcon.pb.h">
+    <ClInclude Include="..\protoc\cl_rcon.pb.h">
       <Filter>thirdparty\protobuf</Filter>
     </ClInclude>
   </ItemGroup>
